// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription AfterTitle should display only the activate action because the subscription is cancelled 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Activate
    </div>,
        "key": "activate",
        "options": Array [
          Object {
            "value": "rechargeActivateSubscription",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Activate subscription
    </div>,
        "tooltip": "This will activate the subscription in Recharge.",
      },
    ]
  }
  payload={
    Object {
      "subscription_id": undefined,
    }
  }
/>
`;

exports[`Subscription AfterTitle should display only the cancel action because the subscription is not cancelled 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Cancel
    </div>,
        "key": "cancel",
        "options": Array [
          Object {
            "value": "rechargeCancelSubscription",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Cancel subscription
    </div>,
        "tooltip": "This will cancel the subscription in Recharge.",
      },
    ]
  }
  payload={
    Object {
      "subscription_id": undefined,
    }
  }
/>
`;

exports[`Subscription TitleWrapper should render 1`] = `
<a
  href="https://mystore.myshopify.com/tools/recurring/customers/asd1as2d3/subscriptions/789/"
  target="_blank"
/>
`;
